# Behold-Urwar-Droid-Concepts

./: .cursorignore  .gitignore  .gitmodules  README.md  app.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.sh  test_duck_config.py
app/: __init__.py  architecture.md  config.py
app/config/: __init__.py  duck_config.py  duck_config_test.py
app/routes/: duck.py  duck_details.py  main.py  open_duck_mini.py  playground.py  routes.py  training.py  workflow.py
app/services/: awd.py  deployment.py  motion.py  open_duck_mini_playground.py  playground.py  reference_motion_generation.py  stl_to_glb.py  training.py
app/utils/: command.py
docs/: BUDC-goal.md  README.md  quickstart.md  simple_overview.md
docs/implementation/: 01_repository_setup.md  02_core_application.md  03_reference_motion.md  04_training_pipeline.md  05_deployment.md  06_playground.md  07_educational.md  08_project_verifications.md  09_simplified_overview.md  README.md
scripts/: generate_models.py  setup_model_conversion.sh
static/css/: base.css  style.css  workflow.css
static/js/: base.js  generate_models.js  model_loader.js  reference_motions.js  workflow.js
static/models/: bdx.json  hero.json  motion_generation.json  open_duck_mini_v2.json  playground.json  training.json
templates/: base.html  duck_page.html  index.html  learn.html  open_duck_mini.html  playground.html  reference_motions.html
templates/duck_droids/: assembly.html  bom.html  playground.html  updates.html
templates/learning/: motion_generation.html  walking_dynamics_learning.html
(+48 files in other folders)
